--- a/index.html
+++ b/index.html
@@ -1,108 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Whiskey Drop | Taste a new whiskey every month</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Whiskey Drop | Taste a new whiskey every month</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+	</script>
+	<script src="https://kit.fontawesome.com/1b4ff420ff.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <article class="container">
-    <!--callout-->
-     <section class="callout">
-      <h1>The finest whiskeys delivered to your doorstep</h1>
-       <p class="lead">Sign up today to start receiving the world's finest whiskeys every month.
-       <s>£19.99</s> <strong><Mark>First one is free!</mark></strong> </p>
-    <p class="text-muted"><small>You must be over 18 to sign up to our service.  
-    Please, drink responsibly.</small></p>
-    <button class="btn btn-success btn-lg" >Sign up!</button>
-      </section>
-      <!--/callout-->
-    <hr>
-    <!--quotes-->
-    <section class="quotes">
-     <h2 class="text-uppercase">Quotes:</h2>
-      <blockquote class="blockquote">
-       <p>I've been introduced to more than 10 great international whiskeys i didn't know about</p>
-        <p>Jane Doe</p>
-      </blockquote>
-      <blockquote class="blockquote">
-       <p>I haven't been sober for months!</p>
-       <p>Jane Doe</p>
-      </blockquote>
-    </section>
-    <!--/quotes-->
-    <hr>
-    <!--features-->
-    <section class="features">
-     <h2 class="text-uppercase">Features:</h2>
-      <div class="feature">
-       <h3>Feature 1</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+	<nav class="navbar navbar-light bg-light navbar-expand-sm">
+		<a href="/" class="navbar-brand">Whiskey Drop</a>
+
+		<button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span></button>
+		<div class="collapse navbar-collapse" id="navbarNavDropdown">
+			<ul class="navbar-nav mr-auto">
+				<li class="active nav-item mr-2"><a class="nav-link" href="/">Home</a></li>
+				<li class=" nav-item mr-2"><a class="nav-link" href="/about">About</a></li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Whiskeys</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<a class="dropdown-item" href="#">Irish</a>
+						<a class="dropdown-item" href="#">Scotch</a>
+						<a class="dropdown-item" href="#">Japanese</a>
+						<a class="dropdown-item" href="#">American</a>
+					</div>
+				</li>
+				<li class=" nav-item mr-2 d-block d-sm-none"><a class="nav-link" href="/login">Sign In / Sign Up</a>
+				</li>
+			</ul>
+		</div>
+
+		<div class="d-none d-md-block">
+			<p class="navbar-text my-auto mr-2"><i>Great whiskey delivered to your door!</i></p>
+			<a href="/login">Sign In / Sign Up</a>
+		</div>
+	</nav>
+	<article class="container mt-3">
+		<div class="row d-none d-sm-block">
+			<div class="col-12">
+				<div class="alert alert-warning"><strong>Sale Now On!</strong>
+					We've got a sale on. Get a 12-month subscription for the price of 6! <a href="">See here for
+						details!</a>
+				</div>
+			</div>
+		</div>
+		<!--callout-->
+		<div class="row">
+			<div class="col-12">
+				<section class="callout jumbotron text-center">
+					<h1>The finest whiskeys delivered to your doorstep</h1>
+					<p class="lead">Sign up today to start receiving the world's finest whiskeys every month.
+						<s class="d-none d-sm-inline">£19.99</s>
+						<span class="d-inline d-sm-none"><br></span>
+						<strong><Mark>First one is free!</mark></strong> </p>
+					<p class="text-muted"><small>You must be over 18 to sign up to our service.  
+           Please, drink responsibly.</small></p>
+					<button class="btn btn-success btn-lg" >Sign up!</button>
+				</section>
+			</div>
+		</div>
+		<!--/callout-->
+		<hr>
+		<!--quotes-->
+		<section class="quotes">
+			<div class="row">
+				<div class="col-12 my-5">
+					<h2 class="text-uppercase">Quotes:</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12 col-md-6">
+					<div class="media">
+						<div class="d-none d-sm-block">
+							<img src="images/girl-image.png" class="rounded-circle mr-3" height="100" width="100" >
+       </div>
+							<div class="media-body">
+								<blockquote class="blockquote">
+									<p>I've been introduced to more than 10 great international whiskeys I didn't know
+										about</p>
+									<p>Jane Doe</p>
+								</blockquote>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-6">
+						<div class="media">
+							<div class="d-none d-sm-block">
+								<img src="images/guy-image.png" class="rounded-circle mr-3" height="100" width="100" >
       </div>
-      <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+								<div class="media-body">
+									<blockquote class="blockquote">
+										<p>I haven't been sober for months!</p>
+										<p>Jane Doe</p>
+									</blockquote>
+								</div>
+							</div>
+						</div>
+					</div>
+		</section>
+		<!--/quotes-->
+		<hr>
+		<!--features-->
+		<section class="features">
+			<div class="row">
+				<div class="col-12 my-5">
+					<h2 class="text-uppercase">Features:</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12 col-md-6 col-lg-4">
+					<div class="feature">
+						<h3><i class="fas fa-gift d-none d-sm-inline"></i> Feature 1
+							<span class="badge badge-success">NEW!</span></h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+						<p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+					</div>
+				</div>
+				<div class="col-12 col-md-6 col-lg-4">
+					<div class="feature">
+						<h3><i class="fas fa-credit-card d-none d-sm-inline"></i> Feature 2</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+						<p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+					</div>
+				</div>
 
-    <div class="feature">
-      <h3>Feature 2</h3>
-       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </div>
-    <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+				<div class="col-12 d-md-none d-lg-block col-lg-4">
+					<div class="feature">
+						<h3><i class="fas fa-times-circle d-none d-sm-inline"></i> Feature 3</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+						<p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+					</div>
+				</div>
+		</section>
+		</div>
+		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+		</script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+			integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+		</script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+			integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+		</script>
 
-    <div class="feature">
-      <h3>Feature 3</h3>
-       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </div>
-    <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
-    </section>
-
-    <hr>
-
-    <section class="monthly favorites">
-     <h2 class="text-uppercase">Monthly Favorites</h2>
-
-    <table class="table">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Name</th>
-      <th scope="col">Origin</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <th scope="row">4</th>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <th scope="row">5</th>
-      <td></td>
-      <td></td>
-    </tr>
-  </tbody>
-</table>
-</section>
-
-    </article>
 </body>
+
 </html>
